@@ -156,7 +156,7 @@ edit_copy_callback (GtkAction *action)
   if (!ddisp) return;
   copy_list = parent_list_affected(diagram_get_sorted_selected(ddisp->diagram));
 
-  cnp_store_objects(object_copy_list(copy_list));
+  cnp_store_objects(object_copy_list(copy_list), 1);
   g_list_free(copy_list);
 
   ddisplay_do_update_menu_sensitivity(ddisp);
@@ -176,7 +176,7 @@ edit_cut_callback (GtkAction *action)
 
   cut_list = parent_list_affected(diagram_get_sorted_selected(ddisp->diagram));
 
-  cnp_store_objects(object_copy_list(cut_list));
+  cnp_store_objects(object_copy_list(cut_list), 0);
 
   change = undo_delete_objects_children(ddisp->diagram, cut_list);
   (change->apply)(change, ddisp->diagram);
@@ -184,10 +184,9 @@ edit_cut_callback (GtkAction *action)
   ddisplay_do_update_menu_sensitivity(ddisp);
   diagram_flush(ddisp->diagram);
 
-
   diagram_modified(ddisp->diagram);
+  diagram_update_extents(ddisp->diagram);
   undo_set_transactionpoint(ddisp->diagram->undo);
-
 }
 
 void
@@ -198,6 +197,7 @@ edit_paste_callback (GtkAction *action)
   Point paste_corner;
   Point delta;
   Change *change;
+  int generation = 0;
   
   ddisp = ddisplay_active();
   if (!ddisp) return;
@@ -207,7 +207,7 @@ edit_paste_callback (GtkAction *action)
     return;
   }
   
-  paste_list = cnp_get_stored_objects(); /* Gets a copy */
+  paste_list = cnp_get_stored_objects(&generation); /* Gets a copy */
 
   paste_corner = object_list_corner(paste_list);
   
@@ -215,10 +215,11 @@ edit_paste_callback (GtkAction *action)
   delta.y = ddisp->visible.top - paste_corner.y;
 
   /* Move down some 10% of the visible area. */
-  delta.x += (ddisp->visible.right - ddisp->visible.left)*0.1;
-  delta.y += (ddisp->visible.bottom - ddisp->visible.top)*0.1;
+  delta.x += (ddisp->visible.right - ddisp->visible.left) * 0.1 * generation;
+  delta.y += (ddisp->visible.bottom - ddisp->visible.top) * 0.1 * generation;
 
-  object_list_move_delta(paste_list, &delta);
+  if (generation)
+    object_list_move_delta(paste_list, &delta);
 
   change = undo_insert_objects(ddisp->diagram, paste_list, 0);
   (change->apply)(change, ddisp->diagram);
@@ -229,6 +230,7 @@ edit_paste_callback (GtkAction *action)
   diagram_remove_all_selected(ddisp->diagram, TRUE);
   diagram_select_list(ddisp->diagram, paste_list);
 
+  diagram_update_extents(ddisp->diagram);
   diagram_flush(ddisp->diagram);
 }
 
@@ -480,6 +482,7 @@ edit_delete_callback (GtkAction *action)
   g_list_free(delete_list);
   
   diagram_modified(ddisp->diagram);
+  diagram_update_extents(ddisp->diagram);
 
   ddisplay_do_update_menu_sensitivity(ddisp);
   diagram_flush(ddisp->diagram);
@@ -497,6 +500,7 @@ edit_undo_callback (GtkAction *action)
 
   undo_revert_to_last_tp(dia->undo);
   diagram_modified(dia);
+  diagram_update_extents(dia);
 
   diagram_flush(dia);
 } 
@@ -511,6 +515,7 @@ edit_redo_callback (GtkAction *action)
 
   undo_apply_to_next_tp(dia->undo);
   diagram_modified(dia);
+  diagram_update_extents(dia);
 
   diagram_flush(dia);
 } 
@@ -772,7 +777,7 @@ void
 view_visible_grid_callback (GtkToggleAction *action)
 {
   DDisplay *ddisp;
-  int old_val;
+  guint old_val;
 
   ddisp = ddisplay_active();
   if (!ddisp) return;
