@@ -21,10 +21,10 @@
 #include <glib.h>
 
 /* The object_list is not copied: */
-void cnp_store_objects(GList *object_list);
+void cnp_store_objects(GList *object_list, int generation);
 
 /* Gets a copy of the stored objects: */
-GList *cnp_get_stored_objects(void);
+GList *cnp_get_stored_objects(int* generation);
 
 gint cnp_exist_stored_objects(void);
 
