@@ -2,108 +2,54 @@
 <shape xmlns="http://www.daa.com.au/~james/dia-shape-ns"
 xmlns:svg="http://www.w3.org/2000/svg">
   <name>Civil - Rotor</name>
-
   <icon>civil_rotor.png</icon>
-
   <connections>
     <point x="1.5" y="2.5" />
-
     <point x="1.5" y="0.5" />
-
     <point x="0.5" y="1.5" />
-
     <point x="2.5" y="1.5" />
-
     <point x="1.5" y="2.5" />
-
     <point x="1.5" y="0.5" />
-
     <point x="0.5" y="1.5" />
-
     <point x="2.5" y="1.5" />
-
     <point x="1.5" y="0.5" />
-
     <point x="1.5" y="0" />
-
     <point x="1.5" y="0.25" />
-
     <point x="0.792893" y="0.792893" />
-
     <point x="0.43934" y="0.43934" />
-
     <point x="0.616117" y="0.616117" />
-
     <point x="0" y="1.5" />
-
     <point x="0.5" y="1.5" />
-
     <point x="0.25" y="1.5" />
-
     <point x="0.792893" y="2.20711" />
-
     <point x="0.43934" y="2.56066" />
-
     <point x="0.616117" y="2.38388" />
-
     <point x="1.5" y="2.5" />
-
     <point x="1.5" y="3" />
-
     <point x="1.5" y="2.75" />
-
     <point x="2.20711" y="2.20711" />
-
     <point x="2.56066" y="2.56066" />
-
     <point x="2.38388" y="2.38388" />
-
     <point x="2.5" y="1.5" />
-
     <point x="3" y="1.5" />
-
     <point x="2.75" y="1.5" />
-
     <point x="2.20711" y="0.792893" />
-
     <point x="2.56066" y="0.43934" />
-
     <point x="2.38388" y="0.616117" />
     <point x="1.5" y="1.5" main="yes"/>
   </connections>
-
   <aspectratio type="fixed" />
-
   <svg:svg>
-    <svg:ellipse style="fill: foreground" cx="1.5" cy="1.5" rx="1"
-    ry="1" />
-
-    <svg:ellipse style="stroke-width: 1; stroke: background" cx="1.5"
-    cy="1.5" rx="1" ry="1" />
-
-    <svg:line style="stroke-width: 1; stroke: background" x1="1.5"
-    y1="0.5" x2="1.5" y2="0" />
-
-    <svg:line style="stroke-width: 1; stroke: background" x1="0.792893"
-    y1="0.792893" x2="0.43934" y2="0.43934" />
-
-    <svg:line style="stroke-width: 1; stroke: background" x1="0" y1="1.5"
-    x2="0.5" y2="1.5" />
-
-    <svg:line style="stroke-width: 1; stroke: background" x1="0.792893"
-    y1="2.20711" x2="0.43934" y2="2.56066" />
-
-    <svg:line style="stroke-width: 1; stroke: background" x1="1.5"
-    y1="2.5" x2="1.5" y2="3" />
-
-    <svg:line style="stroke-width: 1; stroke: background" x1="2.20711"
-    y1="2.20711" x2="2.56066" y2="2.56066" />
-
-    <svg:line style="stroke-width: 1; stroke: background" x1="2.5"
-    y1="1.5" x2="3" y2="1.5" />
-
-    <svg:line style="stroke-width: 1; stroke: background" x1="2.20711"
-    y1="0.792893" x2="2.56066" y2="0.43934" />
+    <svg:ellipse style="fill: background" cx="1.5" cy="1.5" rx="1" ry="1" />
+    <svg:ellipse style="stroke-width: 1; stroke: foreground" cx="1.5" cy="1.5" rx="1" ry="1" />
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="1.5" y1="0.5" x2="1.5" y2="0" />
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="0.792893" y1="0.792893" x2="0.43934" y2="0.43934" />
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="0" y1="1.5" x2="0.5" y2="1.5" />
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="0.792893" y1="2.20711" x2="0.43934" y2="2.56066" />
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="1.5" y1="2.5" x2="1.5" y2="3" />
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="2.20711" y1="2.20711" x2="2.56066" y2="2.56066" />
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="2.5" y1="1.5" x2="3" y2="1.5" />
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="2.20711" y1="0.792893" x2="2.56066" y2="0.43934" />
   </svg:svg>
 </shape>
 
